--- a/demos/index.html
+++ b/demos/index.html
@@ -12,22 +12,33 @@
 
   <script src="../dist/umd/index.js"></script>
 
+
   <script>
-    window.onload = async function () {
 
-      let fs = await IDBFileSystem.getInstance({
-        name: "管理系统A"
-      })
-      let dir = await fs.root.getDirectory('测试文件夹1')
-      let file = await fs.root.getFile('测试文件1')
-      await file.write('我爱北京天安门')
+    ; (async function name(params) {
+
+      let fs = await IDBFileSystem.getInstance()
+      let dirHandle = await fs.root.getDirectoryHandle('测试文件夹1', { create: true })
+      let fileHandle = await dirHandle.getFileHandle('测试文件1', { create: true })
+
+      const contents = "我们都是好孩子我们都是好孩子我们都是好孩子我们都是好孩子我们都是好孩子我们都是好孩子我们都是好孩子我们都是好孩子"
+
+      const writable = await fileHandle.createWritable();
+
+      // Write the contents of the file to the stream.
+      await writable.write(contents);
+
+      // Close the file and write the contents to disk.
+      await writable.close();
+
+      const file = await fileHandle.getFile();
+
+      console.log("file", file)
 
 
-      await file.rename("测试文件1.txt")
 
-      file.readAsText().then(content => console.log(content))
+    })()
 
-    }
   </script>
 </body>
 
